syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.Main.Spice.Services.Mxv";

package Spice.Services.Mxv;
import "spice_primitives_double.proto";

// The greeting service definition.
service MxvService {
  // Sends a greeting
  rpc Calculate (MxvRequest) returns (MxvResponse) {}
}

// The request message containing the user's name.
message MxvRequest {
  Spice.Primitives.Double.DblArray2D doubles = 1;
  Spice.Primitives.Double.DblArray doubles1 = 2;
}

// The response message containing the greetings
message MxvResponse {
  Spice.Primitives.Double.DblArray doubles = 1;
}